<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app_republic.dznews.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_recent"
        android:name="com.app_republic.dznews.ui.breaking.BreakingFragment"
        android:label="@string/recent_news"
        tools:layout="@layout/fragment_breaking" />

    <fragment
        android:id="@+id/navigation_corona"
        android:name="com.app_republic.dznews.ui.corona.CoronaFragment"
        android:label="@string/coronavirus"
        tools:layout="@layout/fragment_corona" />

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.app_republic.dznews.ui.saved.SavedFragment"
        android:label="@string/saved"
        tools:layout="@layout/fragment_saved" />


</navigation>
